<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InsPicSoc</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="empty" />
    <string name="setting">个人信息</string>
    <string name="miao">消息中心</string>
    <string name="friend">好友管理</string>
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <string name="main_home">首页</string>
    <string name="main_my_info">个人</string>
    <string name="main_center">上传</string>
     <string name="main_find">发现</string>
    <string name="main_message">消息</string>
    <string name="title_activity_menu">MenuActivity</string>
 	<string name="upload_photo">上传照片到InsPicSoc</string>
 	<string name="tv_hint">#InsPicSoc语音#</string>
 	<string name="main_title">InsPicSoc</string>
	<string name="main_login">登录</string>
	<string name="main_login_msg">使用QQ号或微信号登录</string>
	<string name="main_regist">注册</string>
	<string name="main_regist_msg">如果你没有QQ号，可以使用手机注册</string>
	<string name="login_user_hint">请输入用户名</string>
	<string name="login_passwd_hint">请输入密码</string>
	<string name="login_assurepasswd_hint">请确认输入密码</string>
	<string name="login_forget_passwd">忘记密码?</string>
 	
</resources>
