<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:arc="http://schemas.android.com/apk/res-auto"
    xmlns:hyman="http://schemas.android.com/apk/res/com.astudio.inspicsoc"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff" 
        android:orientation="vertical" >
        
        <include layout="@layout/main_title" android:focusable="true"/>
             <FrameLayout
	           android:id="@+id/tab_content"
	           android:layout_width="fill_parent"
	           android:layout_height="0dp"
	           android:layout_weight="1.0">
              <android.support.v4.view.ViewPager
                  android:id="@+id/viewPager"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent" >
                  
              </android.support.v4.view.ViewPager>
             </FrameLayout>
             
           <!--    <include layout="@layout/main_center_layout" android:focusable="true"/>-->
           
             
      <LinearLayout
           android:id="@+id/main_tab"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:gravity="center_vertical"
 		   android:layout_gravity="bottom"
		   android:layout_alignParentBottom="true"
		   android:background="@drawable/toolbar_bg">
          
      
      	<Button
       	    android:layout_marginTop="2.0dip"
   			android:text="@string/main_home"
   			android:drawableTop="@drawable/index"
   			android:id="@+id/tab_rb_a"
   			style="@style/main_tab_bottom_left" />
       	
       
       <Button
       	    android:layout_marginTop="2.0dip"
   			android:text="@string/main_center"
   			android:drawableTop="@drawable/photo_button"
   			android:id="@+id/camera_btn"
   			style="@style/main_tab_bottom_center" />
       	
        
       	<Button
            android:layout_marginTop="2.0dip"
   			android:text="@string/main_my_info"
   			android:drawableTop="@drawable/perinfo"
   			android:id="@+id/tab_rb_c"
   			style="@style/main_tab_bottom_right" />
	</LinearLayout>
     </LinearLayout>
</RelativeLayout>
