<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

<RelativeLayout 
    android:id="@+id/login_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" 
    android:gravity="center_horizontal">
        <!-- android:layout_alignParentTop="true" -->
    <RelativeLayout 
        android:id="@+id/login_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        
        android:layout_alignParentTop="true"
        android:background="@drawable/login_top_bg">
        <Button
            android:id="@+id/login_reback_btn"
            android:layout_width="40dp"
            android:layout_height="23dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_reback_selector"/>
        <TextView
            android:layout_width="50dp"
            android:layout_height="23dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_centerInParent="true"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="注册"
           />
        
    </RelativeLayout>
	<EditText 
	    android:id="@+id/login_user_edit"
	    android:layout_width="300dp"
	    android:layout_height="45dp"
	    android:layout_below="@+id/login_top_layout"
	    android:textColor="#aaaaaa"
	    android:textSize="15sp"
	    android:layout_marginTop="25dp"
	    android:layout_marginLeft="10dp"
	    android:background="@drawable/login_selector"
	    android:hint="@string/login_user_hint"/>
	<EditText 
	    android:id="@+id/login_passwd_edit"
	    android:layout_width="300dp"
	    android:layout_height="45dp"
	    android:layout_below="@+id/login_user_edit"
	    android:textColor="#aaaaaa"
	    android:textSize="15sp"
	    android:layout_marginTop="25dp"
	    android:layout_marginLeft="10dp"
	    android:inputType="textPassword"
	    android:background="@drawable/login_selector"
	    android:hint="@string/login_passwd_hint"/>
	<EditText 
	    android:id="@+id/login_assurepasswd_edit"
	    android:layout_width="300dp"
	    android:layout_height="45dp"
	    android:layout_below="@+id/login_passwd_edit"
	    android:textColor="#aaaaaa"
	    android:textSize="15sp"
	    android:layout_marginTop="25dp"
	    android:layout_marginLeft="10dp"
	    android:inputType="textPassword"
	    android:background="@drawable/login_selector"
	    android:hint="@string/login_assurepasswd_hint"/>
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:layout_below="@+id/login_passwd_edit"
	    >
	   
	    <!-- 
	     <Button
	         android:id="@+id/login_login_btn"
	        android:layout_width="100dp"
	        android:layout_height="40dp"
	        android:layout_marginRight="20dp"
	        android:layout_alignParentRight="true"
	        android:text="@string/main_login"
	        android:background="@drawable/main_login_selector"
	        android:textColor="#ffffff"
	        />
	         -->
	</RelativeLayout>
</RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="270dp"
        android:gravity="center"
        android:orientation="vertical" >

<!-- 
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_login_msg"
            android:textSize="14sp" />
 -->
        <Button
            android:id="@+id/main_regist_btn"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/main_regist_selector"
            android:gravity="center"
            android:paddingLeft="130dp"
            android:paddingRight="130dp"
            android:text="@string/main_regist"
            android:textColor="#000000"
            android:textSize="15sp" />
<!-- 
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_regist_msg"
            android:textSize="14sp" />
             -->
    </LinearLayout>

</RelativeLayout>

